# learning-outcome

./: .gitignore  PLAN.md  README.md  env.example  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/database/: __init__.py
app/models/: __init__.py  concept.py  learning.py  student.py
app/services/: __init__.py  analytics.py  embedding.py  graphrag.py  llm_service.py  recommendation.py
app/utils/: __init__.py
data/: knowledge_graph.json  sample_students.json
scripts/: generate_knowledge_graph.py  simulate_students.py
tests/: __init__.py
