[project]
name = "learning-outcome"
version = "0.1.0"
description = "Grade 6 Math Learning Prototype using GraphRAG + LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core Framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Vector Database & Embeddings
    "chromadb>=0.4.18",
    "numpy>=1.24.3",
    "faiss-cpu>=1.7.4",
    
    # Graph Operations
    "networkx>=3.2.1",
    
    # LLM Integration
    "ollama>=0.1.7",
    "openai>=1.6.1",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    
    # Data Processing
    "pandas>=2.1.4",
    "python-multipart>=0.0.6",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "httpx>=0.25.2",
    "tenacity>=8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
